--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -13,6 +13,8 @@
   --color-grey-dark-3: #999;
 
   --shadow-dark: 0 2rem 6rem rgba(0,0,0,.3);
+  --shadow-light: 0 2rem 5rem rgba(0, 0, 0, .06);
+  --line: 1px solid var(--color-grey-light-2);
 }
 
 * {
@@ -58,6 +60,6 @@ body {
     color: var(--color-primary);
     box-shadow: 0 1rem 2rem rgba(#000, .4);
     transform: rotate(5deg) scale(1.3);
-    margin: 1rem;
+    margin-left: 1rem;
   }
 }
