--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -17,6 +17,10 @@
   --line: 1px solid var(--color-grey-light-2);
 }
 
+$bp-largest: 75rem; //1200px
+$bp-large: 68.75rem; //1100px
+$bp-medium: 56.25em; // 900px
+
 * {
   margin: 0;
   padding: 0;
@@ -31,6 +35,9 @@
 html {
   box-sizing: inherit;
   font-size: 62.5%;
+  @media only screen and (max-width: $bp-large) {
+    font-size: 50%;
+  }
 }
 
 body {
