--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -96,11 +96,20 @@
   font-size: 1.4rem;
   list-style: none;
   margin-top: 3.5rem;
-
+  @media only screen and (max-width: $bp-medium) {
+    display: flex;
+    margin: 0;
+  }
   &__item {
     position: relative;
     &:not(:last-child) {
       margin-bottom: .5rem;
+      @media only screen and (max-width: $bp-medium) {
+        margin: 0;
+      }
+    }
+    @media only screen and (max-width: $bp-medium) {
+      flex: 1;
     }
     &:active::before {
       background-color: var(--color-primary-light);
@@ -134,6 +143,10 @@
     padding: 1.5rem 3rem;
     position: relative;
     z-index: 10;
+    @media only screen and (max-width: $bp-medium) {
+      justify-content: center;
+      padding: 2rem;
+    }
   }
 
   &__icon {
@@ -149,6 +162,9 @@
   font-size: 1.2rem;
   text-align: center;
   padding: 2.5rem;
+  @media only screen and (max-width: $bp-medium) {
+    display: none;
+  }
 }
 
 .gallery {
@@ -301,7 +317,7 @@
     margin-right: auto;
   }
   &__friends {
-
+    display: flex;
   }
   &__photo {
     height: 4rem;
@@ -310,7 +326,7 @@
     border: 3px solid #fff;
     box-sizing: content-box;
     &:not(:last-child) {
-      margin-right: -1.5rem;
+      margin-right: -2rem;
     }
   }
 }
@@ -322,6 +338,10 @@
   margin-bottom: 3.5rem;
   position: relative;
   overflow: hidden;
+  @media only screen and (max-width: $bp-medium) {
+    padding: 2rem;
+    margin-bottom: 3rem;
+  }
   &__text {
     margin-bottom: 2rem;
     z-index: 5;
@@ -371,6 +391,9 @@
 .cta {
   padding: 3.5rem;
   text-align: center;
+  @media only screen and (max-width: $bp-medium) {
+    padding: 2.5rem 0;
+  }
   &__book-now {
     font-size: 2rem;
     font-weight: 300;
